--- a/my-next-ui/package.json
+++ b/my-next-ui/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "idb": "^8.0.2",
     "next": "15.1.7",
+    "posthog-js": "^1.223.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
